# bff/db/sqlc/models.go
@@ -1,6 +1,6 @@
 // Code generated by sqlc. DO NOT EDIT.
 // versions:
-//   sqlc v1.22.0
+//   sqlc v1.21.0
 
 package db
 
@@ -136,7 +136,7 @@ type ReturnsLog struct {
 
 type Session struct {
 	ID           uuid.UUID `json:"id"`
-	Email        string    `json:"email"`
+	AccountID    uint64    `json:"account_id"`
 	UserAgent    string    `json:"user_agent"`
 	ClientIp     string    `json:"client_ip"`
 	RefreshToken string    `json:"refresh_token"`
